corrected image url

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <body>
   <h1>Welcome to My Site!</h1>
   <p>This is my one-page site hosted on my own domain.</p>
-  <img src="https://via.placeholder.com/600x300.png?text=My+Image" alt="Sample Image">
+  <img src="Playlist_Oct_24_2025.png" alt="Sample Image">
 </body>
 </html>
