--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
   <meta charset="UTF-8">
   <title>My Site</title>
   <style>
-    body { font-family: sans-serif; text-align: center; margin-top: 50px; }
+    body { font-family: sans-serif; text-align: center; margin-top: 50px; background-color: black; color: white; }
     img { max-width: 90%; height: auto; }
   </style>
 </head>
 <body>
-  <h1>Welcome to My Site!</h1>
-  <p>This is my one-page site hosted on my own domain.</p>
-  <img src="Playlist_Oct_24_2025.png" alt="Sample Image">
+  <p>Past Curfew - and friends - present</p>
+  <h1>Playlist: One-Hit Wonders</h1>
+  <p>A benefit concert for Boys & Girls Clubs of the Peninsula</p>
+  <p>The Guild - Menlo Park - October 24, 2025 - Doors open at 6:30 PM - Tickets going on sale shortly</p>
+  <p>One night. One playlist. One multi-media extravaganza.</p>
+  <img src="Playlist_Oct_24_2025.png" alt="Playlist: One-Hit Wonders">
 </body>
 </html>
