--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>My Site</title>
+  <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
   <style>
-    body { font-family: sans-serif; text-align: center; margin-top: 50px; background-color: black; color: white; }
+    body { font-family: 'Bangers', sans-serif; text-align: center; margin-top: 50px; background-color: black; color: white; }
     img { max-width: 90%; height: auto; }
   </style>
 </head>
