--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>My Site</title>
-  <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Bangers', sans-serif; text-align: center; margin-top: 50px; background-color: black; color: white; }
+    body { font-family: sans-serif; text-align: center; margin-top: 50px; background-color: black; color: white; }
+    h1, h2, h3 { font-family: 'Orbitron', sans-serif; }
     img { max-width: 90%; height: auto; }
   </style>
 </head>
