updated website to enable ticket purchase

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <p>Past Curfew - and friends - present</p>
   <h1>Playlist: One-Hit Wonders</h1>
   <p>A benefit concert for Boys & Girls Clubs of the Peninsula</p>
-  <p>The Guild - Menlo Park - October 24, 2025 - Doors open at 6:30 PM - Tickets going on sale shortly</p>
+  <p>The Guild - Menlo Park - October 24, 2025 - Doors open at 6:30 PM</p>
+  <p><strong>Tickets are now on sale!</strong></p>
+  <p><a href="https://www.tixr.com/groups/guildtheatre/events/playlist-2025-one-hit-wonders-152310" target="_blank" style="color: #ff6b6b; text-decoration: none; font-weight: bold; font-size: 1.2em;">Get Tickets Here</a></p>
   <p>One night. One playlist. One multi-media extravaganza.</p>
   <img src="Playlist_Oct_24_2025.png" alt="Playlist: One-Hit Wonders">
 </body>
