changed title image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <p>Past Curfew - and friends - present</p>
-  <h1>Playlist: One-Hit Wonders</h1>
+  <img src="Playlist_Title.png" alt="Playlist: One-Hit Wonders" style="max-width: 25%; height: auto;">
   <p>A benefit concert for Boys & Girls Clubs of the Peninsula</p>
   <p>The Guild - Menlo Park - October 24, 2025 - Doors open at 6:30 PM</p>
   <p><strong>Tickets are now on sale!</strong></p>
